# dmp

./: .clang-format  .editorconfig  .gitignore  ARCHITECTURE.md  PROTOCOL.md  README.md  pom.xml
native/: CMakeLists.txt
native/include/: device_record.h  dispatcher.h  ipc_protocol.h  ipc_server.h  platform.h
native/src/: dispatcher.cpp  ipc_server.cpp
native/src/linux/: device_enum.cpp  driver_linux.cpp
src/main/java/org/dmp/: AppLauncher.java  HardwareService.java  Main.java
